np-for-namespace-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1
  namespace: namespace-b
spec:
  podSelector:
    matchLabels:
      app: namespaceb-pod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: kubernetes.io/metadata.name: namespace-a
